JSONArray implements List and JSONObject implements Map